fix stretched icon

--- a/extension/css/cryptup.css
+++ b/extension/css/cryptup.css
@@ -1877,6 +1877,8 @@ table#compose div.reply-container .action-show-reply-options-popover.button {
 
 table#compose div.reply-container .action-show-reply-options-popover.button img {
   width: 30px;
+  object-fit: contain;
+  object-position: top;
 }
 
 table#compose .action-show-options-popover {
